# fixed-bump

./: Cargo.toml  README.md  build.rs
misc/: crate-readme.md
src/: bump.rs  chunk.rs  dynamic.rs  generic.rs  inner.rs  lib.rs  rc.rs
src/chunk/: memory.rs  mod.rs
src/tests/: bump.rs  mod.rs  rc.rs
tests/: rc.rs  tests.rs
