[package]
name = "fixed-bump"
version = "0.3.2"
edition = "2021"
rust-version = "1.60"
description = """A bump allocator that uses fixed-size chunks to ensure \
    non-amortized O(1) allocations"""
documentation = "https://docs.rs/fixed-bump"
readme = "misc/crate-readme.md"
repository = "https://github.com/taylordotfish/fixed-bump"
license = "GPL-3.0-or-later"
keywords = ["allocator", "arena", "bump", "constant-time", "fixed-size"]
categories = ["memory-management", "no-std"]

[features]
allocator_api = ["allocator-fallback?/allocator_api"]
doc_cfg = []

[dependencies.allocator-fallback]
version = "0.1.1"
default-features = false
optional = true

[build-dependencies.allocator-fallback]
version = "0.1.7"
default-features = false
optional = true

[package.metadata.docs.rs]
features = ["allocator_api", "doc_cfg"]
